@@ -52,6 +52,8 @@ pocc_driver_ponos (scoplib_scop_p program,
   popts->quiet = poptions->ponos_quiet;
   popts->schedule_coefs_are_pos = poptions->ponos_coef_are_pos;
   popts->objective = poptions->ponos_objective;
+  popts->pipsolve_lp = poptions->ponos_pipsolve_lp;
+
   int i;
   for (i = 0; poptions->ponos_objective_list[i] != -1; ++i)
     popts->objective_list[i] = poptions->ponos_objective_list[i];
