@@ -119,6 +119,7 @@ struct s_pocc_options
   int		ponos_schedule_dim;
   int		ponos_objective;
   int		ponos_objective_list[256];
+  int		ponos_pipsolve_lp;
 
   // PLuTo Options.
   int		pluto; // Run PLuTo (default: no)
