@@ -1,3 +1,11 @@
+2013-03-06  Louis-Noel Pouchet  <pouchet@cs.ucla.edu>
+
+	* driver/pocc/driver-ponos.c,
+	* driver/pocc/include/pocc/options.h,
+	* driver/pocc/options.c,
+	* driver/src/options.h,
+	* driver/src/options.c: Add suport for new LP solver option of ponos.
+
 2013-03-05  Louis-Noel Pouchet  <pouchet@cs.ucla.edu>
 
 	* driver/pocc/driver-ponos.c,
